# lc3-rs

./: Cargo.toml  README.md
examples/: count-to-32767.asm  hello-complex.asm  multiple-sections.asm  reading-manual.asm  testing.asm  testing2.asm  testing3.asm  testing4.asm  testing5.asm  testing6.asm
src/: bit_util.rs  cli.rs  lib.rs  main.rs  tests.rs
src/asm/: asm.rs  parser.rs  tokenizer.rs
src/asm/codegen/: lc3tools_codegen.rs  mod.rs  partial_instruction.rs
src/asm/codegen/lc3tools_tests/: mod.rs  rpn.asm
src/cli_tools/: mod.rs
src/io/: mod.rs  read_complex.rs  read_raw.rs
src/vm/: instructions.rs  machine.rs
