[package]
name = "lc3-rs"
version = "0.9.0"
edition = "2024"
authors = ["reverset"]

[features]
cli = ["crossterm"]
asm = ["crossterm"]

[[bin]]
name = "lc3-cli"
path = "src/cli.rs"
required-features = ["cli"]

[[bin]]
name = "lc3-asm"
path = "src/asm/asm.rs"
required-features = ["asm"]

[lib]
name = "lc3"
path = "src/lib.rs"

[dependencies]
crossterm = { version = "0.29.0", optional = true }
